[navside] fix overflow wrap

--- a/packages/scss/src/components/navside/mods.scss
+++ b/packages/scss/src/components/navside/mods.scss
@@ -31,7 +31,7 @@
 		color: var(--components-navSide-compact-palette-text);
 		font-size: var(--components-navSide-compact-font-size);
 		padding-block: var(--pr-t-spacings-150);
-		padding-inline: var(--pr-t-spacings-100);
+		padding-inline: var(--pr-t-spacings-50);
 		flex-direction: column;
 		justify-content: center;
 		position: relative;
